--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -44,289 +44,11 @@
 
 \tableofcontents
 
-\chapter*{Introduction}
-
-Nous sommes un groupe de six étudiants de CentraleSupélec, cursus Ingénieur Supélec. Dans le cadre d'un projet long, nous avons été amenés à étudier les réseaux de neurones. Ce projet était encadré par deux enseignants-chercheurs de notre école, Mme Joanna Tomasik et M. Arpad Rimmel. De plus une autre équipe de 4 personnes effectuait le même projet en parallèle. L'objectif était d'étudier et d'implémenter différents réseaux de neurones. Ainsi, le projet était décomposé en plusieurs étapes. La première consistait à étudier le fonctionnement d'un réseaux de neurones simples et à l'implémenter. Puis, nous nous sommes intéressés aux réseaux de neurones récurrents offrant de nouvelles opportunités dans l'apprentissage. Deux algorithmes d'apprentissage furent ainsi étudiés : RTRL et BPTT. Enfin, nous sommes entrés dans le vif du sujet en nous penchant sur l'étude des LSTM. La fin du projet était destinée à appliquer les LSTM sur différents problèmes. Tout au long du projet, la démarche fut de rechercher les travaux déjà existants afin de s'approprier les différents aspects du problème et d'étudier les solutions proposées. Puis, nous implémentions nos propres réseaux de neurones sous Python afin de comparer leurs performances respectives.
-
-Tout au long du projet, plusieurs outils furent mis en place afin d'organiser et de faciliter le travail de groupe. GitHub (\url{https://github.com/supelec-lstm}) a été utilisé afin de partager le code entre les différents membres. Zotero permettait de tenir à disposition une bibliographie de tous les articles trouvés sur le sujet. Enfin, une réunion hebdomadaire avec nos professeurs et l'autre équipe permettait de faire le point sur les avancées de la semaine, de clarifier certaines incertitudes et de discuter de problèmes d'implémentation.
-
-Ce compte-rendu fait la synthèse du travail effectué lors de ce projet. On y trouvera des apports théoriques sur le fonctionnement des réseaux de neurones. De  plus, les implémentations choisies seront explicitées et les différentes méthodes d'apprentissage seront comparées.
-
+\include{introduction}
 \include{chapitre1}
-
-\chapter{Une première implémentation}
-
-\section{Motivation}
-
-La première implantation a été faite sous Python avec pour but principal de rester le plus proche possible de l'architecture neuronale du réseau afin de pouvoir bien étudier le fonctionnement de l'algorithme d'apprentissage. Quitte à perdre en rapidité de calcul, nous avons ainsi décidé de créer des éléments neurones et un réseau composé de plusieurs de ces neurones. Cette approche permet une bonne compréhension des concepts de base des réseaux de neurones. Nous avons alors pu appliquer cette implémentation sur des cas simples (XOR notamment, cf Résultats), mais aussi obtenir un aperçu des optimisations possibles afin d'accélérer les calculs. Cela s'est effectivement rapidement révélé nécessaire.  
-
-\section{Diagramme UML}
-
-Suivant cette volonté de créer une première implémentation simple et intuitive, le diagramme UML comporte ainsi deux classes principales : une classe Neuron et une classe Network. Ainsi un réseau (network) sera composé de plusieurs neurones (neurons).
-
-Le neurone a été défini comme une entité autonome, qui comporte des entrées et une sortie et est caractérisé par des poids ainsi que ses relations avec d'autres neurones (parents ou enfants). Il peut alors calculer la sortie si les sorties de ses parents ont préalablement été évaluées. Pour déterminer le gradient au niveau de chaque poids, il a tout d'abord besoin de ceux de ses enfants.
-
-
-\begin{figure}
-\begin{center}
-\includegraphics[scale=0.3]{images/uml_simplifie_maispastrop_imp1.png}
-\caption{Diagramme UML des clsses Neuron et Network}
-\label{Diagramme UML des classes Neuron et Network}
-\end{center}
-\end{figure}
-
-On répartit les neurones en différentes catégories selon leurs fonctions d'activation (sigmoïde, tangente hyperbolique, Softmax ou ReLu par exemple).
-
-Ainsi la classe Neuron possède de nombreuses sous-classes correspondant à ces fonctions. En outre, il existe plusieurs sous-classes destinées aux neurones ayant un comportement particulier. On distingue ainsi BiasNeuron, qui permet d'ajouter un biais au niveau des entrées d'un autre neurone, InputNeuron correspondant simplement aux neurones d'entrées. L'ajout d'un neurone de coût (cost neuron) à la fin du réseau permet de calculer directement l'erreur lors de la propagation d'une entrée. Il faudra ainsi spécifier pour chaque input d'entrée la sortie attendue pour calculer le coût (avec un InputNeuron).
-
-\begin{figure}
-\begin{center}
-\includegraphics[scale=0.18]{images/uml_neurone_imp1.png}
-\caption{Décomposition de la classe neurone}
-\label{uml_neurone_imp1}
-\end{center}
-\end{figure}
-
-
-Les liens entre neurones ne seront pas mémorisées par le réseau. Cette tâche sera réalisée par les neurones eux-mêmes. Ainsi, chacun possédera en attribut une liste de parents et une liste d'enfants, ce qui lui permettra de se situer dans le réseau. Ces deux listes sont indispensables afin de propager le résultat de sortie du neurone et afin de rétropropager le gradient lors de l'algorithme d'apprentissage.
-	
-\section{Principe de fonctionnement}
-Pour utiliser le programme, il suffit de créer le réseau de neurones voulu. On crée pour cela différents neurones (InputNeuron, SigmoidNeuron, CrossEntropyNeuron, ...) en spécifiant les parents à chaque fois. Le programme mettra lui même à jour les listes de parents et d'enfants de chaque neurone afin de créer les différentes relations entre neurones. On crée finalement le réseau (Network) en spécifiant les entrées, sorties, le neurone de coût et les neurones intermédiaires.
-On peut alors appliquer deux fonctions principales sur le réseau. "Propagate" permet de calculer la sortie du réseau pour une entrée fournie en paramètre. "Batch\_propagation\_descent" permet d'appliquer l'algorithme de d'apprentissage basée sur la backpropagation du gradient pour un ensemble d'entrées, de sorties attendues et un learning rate $\eta$ donnés. 
-Pour réaliser cet algorithme d'apprentissage, le programme sélectionne une entrée x et une sortie attendue y\_expected. Il applique ensuite un "propagate" afin d'obtenir la sortie y et le coût correspondant. Un backpropagate permet alors de faire remonter le gradient jusqu'à chaque neurone où il sera accumulé dans une variable acc\_dJdw. On réitère ce processus pour tous les couples x et y\_expected. Enfin, on met à jour les poids grâce à un "descent\_gradient" à l'aide de l'équation \ref{mise_a_jour_poids_batch} (valable pour un batch) :
-
-\begin{equation}
-w(t+1) = w(t) - \frac{\eta}{batch\_size}acc\_dJdw
-\label{mise_a_jour_poids_batch}
-\end{equation}
-
-Nous avons utilisé diverses astuces afin d'améliorer l'efficacité de notre programme. Par exemple, la sigmoide est une fonction d'activation souvent utilisée. Elle est définie par $f(x) = \frac{1}{1+\exp(-x)}$. Au lieu d'entrée directement la formule complète de la dérivée, nous la simplifions en l'écrivant sous la forme $f'(x) = f(x) * (1 - f(x))$.
-Nous utilisons deux variables acc\_dJdw et dJdx dans chaque neurone. La première permet d'accumuler les corrections à apporter aux poids que l'on applique à la fin du batch. dJdx sert de mémoization afin d'optimiser les calculs et de ne pas en faire d'inutiles. En effet, pour calculer son gradient, chaque neurone a besoin des gradients de ses enfants. Si nous ne mémorisions pas le gradient de chaque neurone dans dJdx, nous devrions le recalculer à chaque fois qu'un des parents le demande. Cela alourdirait énormément les calculs et ferait augmenter significativement le temps d'exécution. Ces deux variables doivent évidemment être réinitialisées à la fin du passage du batch de données.
-
-\section{Résultats}
-
-Afin de tester le fonctionnement de cette première application, nous avons commencé par le faire fonctionner sur un modèle simple: le XOR. Le but était donc de réaliser un réseau neuronal à deux entrées et une sortie qui fonctionne comme un XOR : il renvoie zéros si les entrées sont semblables (égales à un ou à zéro) et il renvoie un si elles sont différentes (l'une égale à un et l'autre à zéro). On entraine alors le réseau par le batch définition du XOR : les quatre couples (0;0), (0;1), (1;0) et (1;1). Le gradient est alors calculé en moyennant les résultats du réseau sur ces quatre entrées.
-Cela a permis d'étudier et d'assurer le bon fonctionnement de l'implémentation.
-
-Des premiers tests ont été réalisés avec un réseau avec une couche cachée de deux neurones. Les résultats sont alors plutôt mauvais : alors que théoriquement le XOR est réalisable avec cette architecture, nous avons pu observer que lors de l'exécution de l'algorithme, la descente du gradient a tendance à se bloquer dans un minimum local de la fonction de coût. 
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.6]{images/xor_cost_function.png}
-\caption{fonction de coût bloquée dans un minimum local}
-\label{xor_cout_bloque}
-\end{center}
-\end{figure}
-
-Nous avons alors pu remarquer que même en modifiant différents paramètres, (valeurs initiales des poids, learning rate ou les fonctions d'activation), cela restait inefficace, et les résultats obtenus ne correspondaient pas à la fonction xor que l'on attendait (voir figure \ref{xor_non_fonctionnel}).
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.6]{images/xor_non_fonctionnel.png}
-\caption{XOR bloqué dans un minimum local}
-\label{xor_non_fonctionnel}
-\end{center}
-\end{figure}
-
-Nous sommes alors passés sur une seconde architecture avec cette fois quatre neurones dans la couche intermédiaire cachée. On obtient cette fois de très bons résultats comme celui de la figure \ref{xor_relu_2_4}.
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.6]{images/xor_relu_2_4.png}
-\caption{2 couches cachées de 4 neurones-ReLu}
-\label{xor_relu_2_4}
-\end{center}
-\end{figure}
-
-On peut remarquer avec cette présentation des résultats que le réseau de neurones renvoie les bonnes réponses du XOR pour les entrées définies pour l'entrainement. Pour toutes les autres valeurs,  le réseau "interprète" alors avec son apprentissage. On peut remarquer que cette interprétation varie selon la fonction d'activation. Ainsi pour la tangente hyperbolique les zones définies sont beaucoup plus courbées que pour la ReLu. On peut lier cela avec les représentations graphiques de ces fonctions. En effet la Relu est en fait deux demi-droites alors que la tangente hyperbolique a une courbe représentative beaucoup plus "arrondie".
-
-L'apprentissage s'est donc bien réalisé pour le XOR, les résultats obtenus sont prometteurs pour la suite. Nous avons alors décidé de faire fonctionner l'algorithme sur les données MNIST.
-
-MNIST est une base de données de chiffres écrits à la main réalisée par Yann Lecun. Cette base de donnée est constituée d'un ensemble de données d'apprentissage de 60.000 exemples et un ensemble de test constitué de 10.000 exemple. L'intersection de ces deux ensembles est nulle. Chaque exemple est donc une image d'une taille fixe d'un chiffre écrit à la main, centré. Le but est donc que notre algorithme puisse reconnaître les chiffres écrits.
-
-Nous avons réalisé un premier apprentissage des données MNIST sur un réseau sans couche cachée totalement connecté (fully connected). Ce réseau dispose d'une entrée par pixel des images et de dix sorties, une par chiffre. Chaque entrée associe au pixel une valeur entre 0 et 255 correspond à la nuance de gris du pixel (du blanc au noir). Un premier apprentissage est réalisé sur le réseau avec un calcul du gradient moyenné sur des batchs de 128 exemples. On calcule alors la précision du réseau de neurones sur l'ensemble complet d'apprentissage ainsi que sur l'ensemble de test tous les 2.000 exemples.
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.5]{images/mnist_apprentissage_128.png}
-\caption{Précision en fonction du nombre d'exemples appris}
-\label{mnist_apprentissage_128}
-\end{center}
-\end{figure}
-
-On peut remarquer sur ces premiers résultats, que la précision progresse très vite avant de plafonner autour des 90\% dès les 10.000 exemples utilisés. Nous avons obtenu une précision maximale de 90.83\% sur cette architecture neuronale, très simpliste. Une précision plus importante pourrait être obtenue en ajoutant au moins une couche cachée au réseau. Cependant, le temps d'exécution avec cette première architecture (21.565 secondes soit plus de 6 heures), nous a montré que cela serait impossible avec de réaliser un apprentissage en un temps raisonnable avec des architectures plus compliquées.
-\label{resultat_premiere_implementation}
-
-
-\section{Conclusion}
-Cette première implémentation intuitive permet ainsi d'obtenir des résultats très satisfaisants, allant jusqu'à 90\% de réussite sur le problème de	 MNIST. De plus, elle met en évidence le fonctionnement d'un réseau de neurones. Cependant, on remarque que les calculs ne sont pas du tout optimisés. Cela explique que le temps d'exécution devient rapidement très long. Dans l'exemple de l'application à l'ensemble de données MNIST, entraîner plusieurs fois le réseau sur l'ensemble d'apprentissage permettrait d'obtenir de bien meilleurs résultats, mais cela prendrait alors beaucoup trop de temps pour être véritablement envisageable.
-Afin d'améliorer le temps de calcul et d'optimiser l'algorithme, nous nous sommes intéressés à une nouvelle approche des réseaux de neurones basée sur les graphes de calculs.
-
+\include{chapitre2}
 \include{chapitre3}
-
-\chapter{Études des paramètres}
-
-\section{Approche du problème}
-
-L'implémentation basée sur les graphes de calcul nous a permis de réaliser des tests sur les deux exemples introduits précédemment : XOR et MNIST. \`A travers de nombreux tests, nous avons souhaité étudier l'influence des paramètres de l'algorithme sur ses performances, c'est-à-dire sur sa précision et sa rapidité.
-\medbreak
-Il existe sept paramètres que l'on peut définir pour un réseau de neurones :
-\begin{itemize}
-\item l'architecture du réseau
-\item le prétraitement des données
-\item l'initialisation des poids
-\item le choix des fonctions d'activations
-\item le choix de la fonction de coût
-\item la taille des batchs et le nombre de passage
-\item le taux d'apprentissage
-\end{itemize}
-\medbreak
-L'influence d'un paramètre n'étant bien évidemment pas indépendante ni des autres paramètres ni du problème considéré, il devient rapidement délicat d'obtenir des résultats robustes. En effet, il est impossible de réaliser des mesures en faisant varier sept variables en même temps, tout en effectuant des répétitions à chaque fois pour s'assurer de la précision des relevés. Pour s'affranchir de cette difficulté, nous avons choisi de ne faire varier qu'un seul paramètre à la fois en l'intégrant dans une configuration apportant des résultats acceptables. L'influence du paramètre étudié sur plusieurs configurations permet alors d'interpoler une estimation de son comportement général.
-C'est donc ainsi que nous avons pu déterminer des éléments permettant de comprendre les rôles de ces paramètres et de les choisir pour optimiser l'efficacité d'un réseau de neurones. Ce sont ces éléments qui vont être présentés dans la suite de cette partie.
-
-\section{\'Etude du XOR}
-
-Dans un premier temps, nous avons effectués plusieurs tests sur un exemple très simple : XOR.
-Quelques résultats ont déjà été présentés en partie \ref{resultat_premiere_implementation}. Ils vont être rappelés et détaillés ici.\\
-
-Nous avons principalement étudié l'influence de l'architecture du réseau sur la rapidité de l'apprentissage. \\
-
-La figure \ref{xor_architecture_tanh} présente la précision obtenue pour des structures d'une seule couche cachée avec un nombre variable de neurones de fonction d'activation tanh. Moins le réseau possède de neurones sur sa couche cachée, plus il a besoin d'apprendre sur un nombre important d'itérations. Cependant, avec seulement deux neurones sur la couche cachée, l'apprentissage se fait déjà relativement rapidement et le gain obtenu en ajoutant des états cachés n'est pas vraiment significatif puisqu'il ajoute un coût temporel de calcul.\\
-
-Cette même étude réalisée dans les mêmes conditions en remplaçant simplement la fonction d'activation tangente hyperbolique par une ReLu donne des résultats complètement différents visible en figure \ref{xor_architecture_relu}. Ici, la taille de la couche cachée prend beaucoup plus d'importance puisqu'elle devient le paramètre principal pour obtenir une précision parfaite rapidement. En effet, même si augmenter le nombre d'itérations permet à des architectures avec peu d'états cachés permet d'améliorer la précision du réseau, cette amélioration est très lente. \`A l'inverse le réseau apprend presque instantanément lorsque l'on augmente le nombre d'états cachés.\\
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.6]{images/xor_architecture_tanh.png}
-\caption{Convergence en fonction de l'architecture avec tanh}
-\label{xor_architecture_tanh}
-\end{center}
-\end{figure}
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.6]{images/xor_architecture_relu.png}
-\caption{Convergence en fonction de l'architecture avec relu}
-\label{xor_architecture_relu}
-\end{center}
-\end{figure}
-
-L'exemple de ces deux situations représente clairement les problèmes rencontrés pour étudier les influences des paramètres d'un réseau de neurone. En effet, l'influence de la taille de la couche cachée sur notre réseau n'est plus du tout la même selon le choix de la fonction d'activation appliquée à chaque neurone. Ainsi, il n'est souvent pas possible de définir une règle générale à appliquer concernant un paramètre pris indépendamment des autres.
-
-\section{\'Etude de MNIST}
-
-\subsection{Introduction}
-Dans cette partie, mis à part les paramètres explicitement précisés pour un exemple, toutes les mesures qui vont être présentées furent réalisées en utilisant les paramètres suivants :
-\begin{itemize}
-\item Pas de couche cachée, les neurones d'entrée sont directement reliés aux sorties
-\item Les entrées sont centrées et normalisées : chaque pixel est alors représenté par une valeur de [-1;1]
-\item Les poids sont initialisés aléatoirement avec une fonction Gaussienne centrée de variance 0,1
-\item On utilise une sigmoïde en sortie
-\item On utilise l'erreur quadratique pour la fonction de coût
-\item Les exemples sont traités pas batch de 128
-\item On fixe un learning rate de 0,1
-\end{itemize}
-
-\subsection{Architecture du réseau}
-
-Le nombre de couches cachées d'un réseau de neurones ainsi que leur composition constitue l'architecture de ce réseau.
-
-De façon intuitive, il parait évident qu'une plus grande architecture de réseau, possédant plus de neurones par couches cachées ou plus de couches cachées apprendra avec plus de précision l'ensemble de données. Cependant cela a un coût en temps et rendra l'apprentissage beaucoup plus lent.
-Ainsi, alors qu'un apprentissage effectué sans couche cachée sur 30 passages du set de données mnist aura une précision d'environ 93\%, un réseau composé d'une couche cachée de 400 neurones ayant pour fonction d'activation tangente hyperbolique pourra avoir sur ce même ensemble presque 98\% de précision. Le résultat de cette seconde situation est visible en figure \ref{mnist100}. On y remarque que l'ensemble de données est très rapidement complètement appris.
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.5]{images/mnist100.png}
-\caption{Précision pour un réseau avec une couche cachée de 400 neurones}
-\label{mnist100}
-\end{center}
-\end{figure}
-
-\subsection{Initialisation des poids}
-Avant le lancement de l'algorithme sur un réseau de neurone, il est nécessaire d'initialiser les poids. L'usage le plus courant est de les initialiser aléatoirement. Cependant, le choix de la distribution aléatoire n'est pas forcément évident. En effet, on peut choisir d'utiliser une distribution uniforme, une distribution gaussienne ou tout autre type de distribution aléatoire avec des paramètres variables.
-
-Nous avons donc testé trois types de fonction d'initialisation des poids : une répartition uniforme, une répartition uniforme centrée en 0  et une répartition gaussienne centrée en 0.
-Si les initialisations centrées en 0 permettent une convergence un petit peu plus rapide, ces trois initialisations produisent des résultats similaires. Cependant, l'amplitude des poids change beaucoup les résultats quelle que soit la fonction d'initialisation. En effet, les poids convergeant lors de l'apprentissage vers de petites valeurs, une initialisation avec de petites amplitudes va permettre une convergence plus rapide.
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.2]{images/initialisationpoids_amplitude01.png}
-\caption{Précision sur les ensembles de test (en noir) et d'apprentissage (en rouge) en fonction du nombre d'exemples utilisés pour l'apprentissage pour une initialisation des poids d'amplitude 0.1 }
-\label{initialisationpoids_amplitude0.1}
-\end{center}
-\end{figure}
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.2]{images/initialisationpoids_amplitude10.png}
-\caption{Précision sur les ensembles de test (en noir) et d'apprentissage (en rouge) en fonction du nombre d'exemples utilisés pour l'apprentissage pour une initialisation des poids d'amplitude 0.1}
-\label{initialisationpoids_amplitude10}
-\end{center}
-\end{figure}
-
-C'est ce que l'on peut voir sur les deux figures \ref{initialisationpoids_amplitude0.1} et \ref{initialisationpoids_amplitude10}. Dans les deux cas, les poids sont initialisés selon une loi normale centrée de variance 0,1. Cependant, sur la première, un coefficient multiplicatif de 0,1 leur est affecté alors que celui-ci est de 10 sur la deuxième.
-On peut ainsi bien observer que dans le cas du facteur multiplicatif de 10, la convergence est plus lente au début de l'apprentissage, même si l'on atteint sensiblement les mêmes valeurs finales de précision.
-
-
-
-\subsection{Choix des fonctions d'activations et de coût}
-
-Le tableau \ref{influence_fonction_cout} présente quelques résultats sur la précision obtenu par le réseau selon les fonctions de coût et les fonctions en sortie utilisées.
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.6]{images/influence_fonction_cout.png}
-\caption{Influence de la fonction de coût sur la précision obtenue par le réseau}
-\label{influence_fonction_cout}
-\end{center}
-\end{figure}
-Le choix de la fonction de coût ne semble avoir qu'un impact très mineur sur les résultats obtenus par le réseau. L'erreur quadratique présente des performances légèrement supérieures à l'entropie croisée pour ce problème mais cette différence est très faible.
-
-En revanche il apparait que l'utilisation de la fonction Softmax en sortie donne de meilleurs résultats que celle d'une sigmoïde. L'emploi de Softmax entrainant un cout en temps plus important que celui de Sigmoïde, cet avantage est à relativiser.
-
-
-\subsection{Taille des batchs et nombre de passages}
-
-La taille d'un batch est le nombre d'exemples que l'on insère dans le réseau entre chaque rétropropagation du gradient.
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.5]{images/precision_taille_batch.png}
-\caption{Influence de la taille du batch}
-\label{precision_taille_batch}
-\end{center}
-\end{figure}
-
-La figure \ref{precision_taille_batch} présente la précision obtenue pour différentes tailles de batch. On remarque qu'au delà de 150,augmenter la taille du batch n'améliore presque plus les performances du réseau.
-La figure \ref{precision_batch_temps} présente les mêmes données que la figure \ref{precision_taille_batch} mais répartis en fonction du temps de calcul. Utiliser des batchs plus petits semble être plus efficace pour l'apprentissage des données mnist.
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.5]{images/precision_batch_temps.png}
-\caption{Influence de la taille du batch sur le temps de calcul}
-\label{precision_batch_temps}
-\end{center}
-\end{figure}
-
-
-\subsection{Taux d'apprentissage}
-Nous avons aussi étudié l'influence du taux d'apprentissage ou learning rate. En effet celui-ci influe sur la mise à jour des poids : plus il est grand et plus chaque l'importance donnée au calcul de la dérivée est important. Avoir un taux d'apprentissage grand permet d’obtenir rapidement des performances satisfaisantes en termes de précision. Au contraire, des phénomènes d'oscillations sont observés pour un apprentissage conséquent, et cela fournit en retour de moins bons résultats, par rapport à des taux d'apprentissage plus faibles. Cela a été illustré sur la figure \ref{influence_learningrate}.
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[scale=0.6]{images/influence_learningrate.png}
-\caption{Influence du learning rate sur la précision sur l'ensemble de test en fonction du nombre d'exemple utilisés}
-\label{influence_learningrate}
-\end{center}
-\end{figure}
-
-Nous avons alors étudié l'apprentissage du réseau pour des taux d'apprentissage allant de 0.01 à 100.
-Nous pouvons alors distinguer trois cas reflétant les principaux comportements :
-
-\begin{itemize}
-\item Pour un taux d'apprentissage de 0.01, la convergence est très lente mais sans oscillations. Si la précision obtenue peut-être à hauteur des autres taux d'apprentissage en utilisant plus d'exemples, on peut considérer celui-ci trop petit.
-\item Pour un taux d'apprentissage de 100, la convergence est très rapide au début, mais oscille beaucoup et va finalement bloquer l'apprentissage vers un autre minimum local de coût non désiré. On peut donc considérer ce taux d'apprentissage comme trop grand.
-\item Pour un taux d'apprentissage de 0.1, il semble apparaître un bon compromis entre stabilité et vitesse de la convergence. C'est cette valeur qui en général sera choisie pour les tests, bien que d'autres soient satisfaisants (0.8 ou 1 par exemple).
-\end{itemize}
-
+\include{chapitre4}
 \include{chapitre5}
 \include{chapitre6}
 \include{chapitre7}
